--- a/index.css
+++ b/index.css
@@ -68,6 +68,7 @@ body {
   transform: rotateX(90deg) translate3d(0, 0, calc(var(--size) / 2));
 }
 
+.active .top,
 .cube:hover .top {
   transform: translate3d(0, calc(-1 * var(--size)), 0);
 }
@@ -78,6 +79,7 @@ body {
   transform: rotateX(90deg) translate3d(0, 0, calc(var(--size) / -2));
 }
 
+.active .bottom,
 .cube:hover .bottom {
   transform: rotateX(0deg) translate3d(0, var(--size), 0);
 }
@@ -88,6 +90,7 @@ body {
   transform: rotateY(-90deg) translate3d(0, 0, calc(var(--size) / 2));
 }
 
+.active .left,
 .cube:hover .left {
   transform: translate3d(calc(-1 * var(--size)), 0, 0);
 }
@@ -98,6 +101,7 @@ body {
   transform: rotateY(-90deg) translate3d(0, 0, calc(var(--size) / -2));
 }
 
+.active .right,
 .cube:hover .right {
   transform: translate3d(var(--size), 0, 0);
 }
@@ -113,6 +117,7 @@ body {
   transform: rotateY(180deg);
 }
 
+.active .front,
 .cube:hover .front {
   transform: translate3d(var(--size), 0, 0) rotateY(180deg);
 }
@@ -123,6 +128,7 @@ body {
   transform: translate3d(0, 0, calc(var(--size) / -2));
 }
 
+.active .back,
 .cube:hover .back {
   transform: translate3d(0, 0, 0);
 }
